# bidScoring

./: .env.example  .gitignore  2026-02-08-full-test-report.md  AGENTS.md  CHANGELOG.md  FIXES_SUMMARY.md  README.md  mcp_demo_result.json  pyproject.toml  requirements.txt
.claude/: README.md
bid_scoring/: __init__.py  anchors_v2.py  backfill_v0_2.py  chunk_processor.py  chunk_rebuild_v2.py  citation_rag_pipeline.py  citations_v2.py  config.py  contextual_retrieval.py  cpc_pipeline.py  embeddings.py  embeddings_batch.py  files.py  hichunk.py  hichunk_builder.py  hichunk_node.py  hybrid_retrieval.py  ingest.py  late_chunking.py  llm.py  multi_vector_retrieval.py  rag_pipeline.py  raptor.py  scoring.py  scoring_config.py  scoring_schema.py  search.py  structure_rebuilder.py  verify.py
config/: agent_scoring_policy.yaml  retrieval_config.yaml  scoring_rules.yaml  scoring_standards.yaml
design/: Agent-Skill评分系统设计.md
docs/: cpc_structure_rebuild_summary.md  hybrid_retrieval_usage.md  plan_embedding_implementation.md  rag_chunking_strategy_analysis.md  small_to_big_implementation_summary.md  synthetic_hybrid_eval_design.md  system-architecture.html  usage.md  实施计划-通俗版.md
eval/: dataset.jsonl
mcp_servers/: CLAUDE_CODE_GUIDE.md  README.md  __init__.py  annotation_insights.py  bid_analyzer.py  pdf_annotator.py  retrieval_server.py
migrations/: 000_init.sql  001_init.sql  002_add_fulltext_search.sql  002_add_mineru_fields.sql  003_add_pg_trgm_index_for_keyword_search.sql  003_optimize_pgvector_index.sql  004_optimize_vector_storage_and_hnsw.sql  005_add_minio_support.sql  005_cpc_contextual_chunks.sql  006_cpc_hierarchical_nodes.sql  007_cpc_multi_vector.sql  008_cpc_structure_rebuild.sql  009_add_source_chunk_ids.sql  009_fix_mineru_import.sql  010_small_to_big_chunking.sql  011_scoring_schema.sql
mineru/: __init__.py  convert_pdf.py  coordinator.py  minio_storage.py  process_pdfs.py
references/: output_schema.json  output_schema_batch.json  scoring_rules.yaml
scripts/: __init__.py  _build_all_embeddings_lib.py  _hichunk_nodes_lib.py  apply_migrations.py  apply_pdf_highlight.py  backfill_v0_2_units.py  build_all_embeddings.py  build_contextual_chunks.py  build_embeddings.py  build_hichunk_nodes.py  build_policy_artifacts.py  check_skill_policy_sync.py  compare_scoring_runs.py  demo_citation_rag.py  demo_v0_2_e2e.py  eval_e2e_full_pipeline.py  evaluate_hybrid_search.py  evaluate_hybrid_search_gold.py  evaluate_hybrid_search_multiversion.py  evaluate_retrieval_policy_gate.py  evaluate_scoring_backends.py  generate_synthetic_hybrid_eval_data.py  ingest_mineru.py  integrated_scoring_demo.py  mcp_demo.py  offline_scoring_demo.py  score_dimension.py  test_mcp_quick.py  (+4 more)
(+291 files in other folders)
