[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bid_scoring"
version = "0.1.0"
description = "Bid Scoring System"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "openai",
    "pgvector",
    "psycopg[binary]",
    "psycopg-pool>=3.3.0",
    "python-dotenv",
    "pyyaml",
    "tiktoken",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bid_scoring*", "mcp_servers*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
